@startuml

title __CLI's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace view {
        namespace cli {
          class it.polimi.ingsw.client.view.cli.CLI {
              - consoleIn : Scanner
              - consoleOut : PrintStream
              + CLI()
              + anotherPlayerHasBuilt()
              + anotherPlayerHasEndedHisTurn()
              + anotherPlayerHasMoved()
              + anotherPlayerHasPickedUpGod()
              + anotherPlayerHasPlacedWorker()
              + anotherPlayerHasSelectedGods()
              + anotherPlayerHasSelectedWorker()
              + anotherPlayerIsBuilding()
              + anotherPlayerIsMoving()
              + anotherPlayerIsPickingUpGod()
              + anotherPlayerIsPlacingWorker()
              + anotherPlayerIsSelectingWorker()
              + askIpAddress()
              + askNumbOfPlayer()
              + askUserName()
              + build()
              + builtSuccessfully()
              + choseActionToPerform()
              + closeClient()
              + debug()
              + endBuildRequestError()
              + endBuildingPhase()
              + endMoveRequestError()
              + endMovingPhase()
              + endTurn()
              + errorWhileActivatingPower()
              + errorWhileBuilding()
              + errorWhileChoosingGods()
              + errorWhileMovingWorker()
              + errorWhilePickingUpGod()
              + errorWhilePlacingYourWorker()
              + errorWhileSelectingWorker()
              + godPickedUpSuccessfully()
              + godsSelectedSuccessfully()
              + iLose()
              + loginError()
              + loginSuccessful()
              + moveWorker()
              + pickFromChosenGods()
              + placeWorker()
              + placingPhaseEnding()
              + playerLeftTheGame()
              + powerActivated()
              + printCanBuildAgain()
              + printCanMoveAgain()
              + run()
              + selectGods()
              + selectWorker()
              + showAllPlayersInGame()
              + showDeck()
              + showMap()
              + someoneElseDoingStuff()
              + someoneHasLost()
              + startingPlayerTurn()
              + startingTurn()
              + wantBuildAgain()
              + wantMoveAgain()
              + workerMovedSuccessfully()
              + workerPlacedSuccessfully()
              + workerSelectedSuccessfully()
              + youAreNotTheGodLikePlayer()
              + youAreTheGodLikePlayer()
              + youLose()
              + youWin()
              - doItAgain()
              - getCoordinate()
              - printMessageFromServer()
              - welcomeToSantorini()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.client {
      namespace view {
        namespace cli {
          class it.polimi.ingsw.client.view.cli.SantoriniStream {
              {static} + GAME_MANAGER_SAYS : String
              {static} + INSERT_A_NUMBER : String
              ~ SantoriniStream()
          }
        }
      }
    }
  }
  

  it.polimi.ingsw.client.view.cli.CLI -up-|> it.polimi.ingsw.client.view.ClientView
  it.polimi.ingsw.client.view.cli.SantoriniStream -up-|> java.io.PrintStream


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
